trunk/Archive2/fe/18951dc900abac/output
main.cpp:29:21: error: expected ';' at end of declaration
        customCRD vv { {  {1,  2},  {3,  4},  {5,  6} }, CARTESIAN };
                    ^
                    ;
main.cpp:30:19: error: expected unqualified-id
        customCRD { {  {7,  8},  {9, 10}, {11, 12} }, SPHERICAL },
                  ^
2 errors generated.
